Refactor tests to improve readability and streamline assertions.
Removed unused variables in test setup, cleaned up comments, and simplified assertions for better clarity and maintainability. Updated list access method to improve code consistency.